<?xml version="1.0" encoding="utf-8"?>
<!--(c) Raúl Enrique González Bondarchuk -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">
    <LinearLayout
        android:id="@+id/LLNombre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txt_nombre"
            android:textAlignment="center"
            android:textSize="22sp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/edNombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/introduzca_el_nombre"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLFechaNac"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLNombre">

        <TextView
            android:id="@+id/txtFechaNac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fecha_nac"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLModalidadCIclo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLFechaNac">

        <TextView
            android:id="@+id/txtCiclo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/modalidad_ciclo"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLBotonLeerDatos"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLModalidadCIclo">

        <Button
            android:id="@+id/btnLeerDatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/leer_datos" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLBotonObtenerDatos"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLBotonLeerDatos">

        <Button
            android:id="@+id/btnObtenerDatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/obtener_edad_y_grupo" />
    </LinearLayout>

    <View
        android:id="@+id/View"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#DFE1E0"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLBotonObtenerDatos" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/View"
        app:layout_constraintEnd_toEndOf="@+id/View"
        app:layout_constraintStart_toStartOf="@+id/View"
        app:layout_constraintTop_toTopOf="@+id/View" />

    <LinearLayout
        android:id="@+id/LLBotonGuardarHistorico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View">

        <Button
            android:id="@+id/btnGuardarHistorico"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/guardad_en_historico" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>